--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "ag-grid-angular": "~31.3.2",
+    "ag-grid-community": "31.3.4",
+    "ag-grid-enterprise": "31.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
